--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,10 @@
     "prettier": "prettier --write '**/*.ts'"
   },
   "dependencies": {
+    "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
     "@types/express-ws": "^3.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "ts-node": "^8.3.0",
